Trying to make a full page header!

--- a/index.html
+++ b/index.html
@@ -69,7 +69,12 @@
         </div>
         <!-- /.container -->
  	</nav>
-
+	<header class = "sb-page-header">
+		<div class="container">
+			<h1>Welcome</h1>
+			<p>a bootstrap 3 website mothafucka!!!</p>	
+		</div>
+	</header>
 
     <!--Bootstrap Core JavaScript-->
     <script src="js/bootstrap.min.js"></script>
