Removed some irelevent file.

--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
  			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                      <li>
-                        <a href="index.html">Officers</a>
+                        <a href="index1.html">Officers</a>
                     </li>
                     <li>
-                        <a href="index.html">Tutoring Hours</a>
+                        <a href="index2.html">Tutoring Hours</a>
                     </li>
                     <li>
-                        <a href="index.html">Sponsors</a>
+                        <a href="index3.html">Sponsors</a>
                     </li>
                     <li>
-                        <a href="index.html">Join Us!</a>
+                        <a href="index4.html">Join Us!</a>
                     </li>
                 </ul>
             </div>
@@ -75,6 +75,13 @@
 			<p>a bootstrap 3 website mothafucka!!!</p>	
 		</div>
 	</header>
+    <footer>
+        <div class="row">
+            <div class="col-lg-12">
+                <p> Copyright &copy; IEEEUTD 2016</p>
+            </div>
+        </div>        
+    </footer>
 
     <!--Bootstrap Core JavaScript-->
     <script src="js/bootstrap.min.js"></script>
