fixed some small errors.

--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
                         <p><a href="#">Take a look at our tutoring hours><a></p>
                     </div>
                     <div class="col-md-4 header-text3">
-                        <h2><a href="#">Need Help with classes?<a></h2>
-                        <p><a href="#">Take a look at our tutoring hours><a></p>
+                        <h2><a href="#">Bored and want something to do?<a></h2>
+                        <p><a href="#">Take a look at our upcoming events><a></p>
                     </div>
                     <div class="col-md-4 header-text4">
-                        <h2><a href="#">Need Help with classes?<a></h2>
-                        <p><a href="#">Take a look at our tutoring hours><a></p>
+                        <h2><a href="#">Want to be a Tutor?<a></h2>
+                        <p><a href="#">Send us an email><a></p>
                     </div>
                 </div>
             </div>
