added some buttons, and fixed translucent text issue.

--- a/index.html
+++ b/index.html
@@ -86,21 +86,31 @@
                 </div>
                 <div class="row">
                     <div class="col-md-4 header-text2">
-                        <h2><a href="#">Need Help with classes?<a></h2>
-                        <p><a href="#">Take a look at our tutoring hours><a></p>
+                        <h2><a href="#">Need help with classes?<a></h2>
+                        <p><a href="#" class="button">Take a look at our tutoring hours ><a></p>
                     </div>
                     <div class="col-md-4 header-text3">
                         <h2><a href="#">Bored and want something to do?<a></h2>
-                        <p><a href="#">Take a look at our upcoming events><a></p>
+                        <p><a href="#" class="button">Take a look at our upcoming events ><a></p>
                     </div>
                     <div class="col-md-4 header-text4">
-                        <h2><a href="#">Want to be a Tutor?<a></h2>
-                        <p><a href="#">Send us an email><a></p>
+                        <h2><a href="#">Want to be a tutor?<a></h2>
+                        <p><a href="#" class="button"   >Send us an email ><a></p>
                     </div>
                 </div>
             </div>
     </div>
     </artcle>
+        <div class= :"container3">
+        </div>
+    <article>
+        <div class= :"container4">
+        </div>
+    </article>
+    <article>
+        <div class =:"container5">
+        </div>
+    </article>
 
     <footer>
         <div class="row">
