changed up some inconsistances in the bootstrap framework. Hopefully it won't cause problems elsewhere, finger crossed!

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
  			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                      <li>
-                        <a href="officers.html">Officers</a>
+                        <a href="Officers.html">Officers</a>
                     </li>
                     <li>
                         <a href="Tutoring_hours.html">Tutoring Hours</a>
@@ -101,14 +101,21 @@
             </div>
     </div>
     </artcle>
-        <div class= :"container3">
+        <div class="row container3">
+            <div class="col-md-4 header mid-text">
+                <p> Put Inspirational quote here</p>
+            </div>
         </div>
     <article>
-        <div class= :"container4">
+        <div class= "row container4">
+            <div class="row">
+            </div>
         </div>
     </article>
     <article>
-        <div class =:"container5">
+        <div class ="row container5">
+            <div class="row">
+            </div>
         </div>
     </article>
 
@@ -129,11 +136,11 @@
     
     
     <!--Script to Activate the Carousel -->
-    <script>
+    <!--script>
     $('.carousel').carousel({
         interval: 5000 //changes the speed
     })
-    </script>
+    </script-->
 
     <!--Script to initially hide the navbar-->
 
