Testing to resolve some issues i am having with git and github.
Nothing of too much concern.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </artcle>
         <div class="row container3">
             <div class="col-md-4 header mid-text">
-                <p> Put Inspirational quote here</p>
+                <p> Put Inspirational quote here, for the love GOD !!!!!! </p>
             </div>
         </div>
     <article>
