--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
                         <a href="Officers.html">Officers</a>
                     </li>
                     <li>
-                        <a href="Tutoring_hours.html">Tutoring Hours</a>
+                        <a href=#>Tutoring Hours</a>
                     </li>
                     <li>
-                        <a href="Events.html">Events</a>
+                        <a href=#>Events</a>
                     </li>
                     <li>
-                        <a href="Events.html">Sponsors</a>
+                        <a href=#>Sponsors</a>
                     </li>
                     <li>
-                        <a href="Sponsors.html">Join Us!</a>
+                        <a href=#>Join Us!</a>
                     </li>
                 </ul>
             </div>
@@ -86,35 +86,57 @@
                 </div>
                 <div class="row">
                     <div class="col-md-4 header-text2">
-                        <h2><a href="#">Need help with classes?<a></h2>
+                        <h2><a href="#">Need help with classes?</a></h2>
                         <p><a href="#" class="button">Take a look at our tutoring hours ><a></p>
                     </div>
                     <div class="col-md-4 header-text3">
-                        <h2><a href="#">Bored and want something to do?<a></h2>
+                        <h2><a href="#">Bored and want something to do?</a></h2>
                         <p><a href="#" class="button">Take a look at our upcoming events ><a></p>
                     </div>
                     <div class="col-md-4 header-text4">
-                        <h2><a href="#">Want to be a tutor?<a></h2>
-                        <p><a href="#" class="button"   >Send us an email ><a></p>
+                        <h2><a href="#">Want to be a tutor?</a></h2>
+                        <p><a href="#" class="button">Sign up here ></a></p>
                     </div>
                 </div>
             </div>
     </div>
     </artcle>
         <div class="row container3">
-            <div class="col-md-4 header mid-text">
-                <p> Put Inspirational quote here</p>
+            <div class="col-lg-12 ">
+                <div class="quote-text">
+                    <p> We only give negative feedback</p>
+                </div>
             </div>
         </div>
     <article>
         <div class= "row container4">
-            <div class="row">
+            <div class="col-lg-12">
+                <div class="middle-text1">
+                    <h2>WHO WE ARE</h2>
+                    <p>We are a student run branch of IEEE whose purpose is to provide current undergraduate students with an opportunity to enrich their learning experience and connect with local industry professionals. We provide students with an environment that allows them to socialize through IEEE events and enables them to develop professional skills through tech talks and personal interactions. By sustaining a close community of passionate young engineers, we hope to encourage excellence among our members and enhance the character of the engineering profession at large.</p>
+                </div>
+                <div class="middle-text2">
+                    <h2>LOCATION</h2>
+                    <p>811 Synergy Park Blvd, Richardson, TX 75080</p>
+                    <p>Room: SPN 2.220</p>
+                    <p>Email: ieeeUTD@gmail.com</p>
+                    <br>
+                    <p><a href="https://www.google.com/maps/dir/''/Synergy+Park+North+Building+-+UT+Dallas,+811+Synergy+Park+Blvd,+Richardson,+TX+75080/@32.9936352,-96.8222377,12z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x864c2206e04feeb9:0x54e35d04c429ba8a!2m2!1d-96.7521975!2d32.9936548" class="button">google maps ></a></p>
+                </div>
             </div>
         </div>
     </article>
     <article>
         <div class ="row container5">
-            <div class="row">
+            <div class="col-lg-12">
+                <div class="sidebar">
+                    <h2>Good News Everyone!</h2>
+                    <p>We have plans to post notes for the classes we tutor.</p>
+                </div>
+                <div class="upcoming_events">
+                    <h2>WHAT IS HAPPENING THIS WEEK</h2>
+                    <p> we will be posting upcoming events for the week here. </p>
+                </div>
             </div>
         </div>
     </article>
