--- a/Events.html
+++ b/Events.html
@@ -9,7 +9,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>IEEEUTD | Officers</title>
+        <title>IEEEUTD</title>
 
         <!-- Bootstrap Core CSS -->
         <link type="text/css" href="css/bootstrap.css" rel="stylesheet"></link>
