--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
                         <a href="Officers.html">Officers</a>
                     </li>
                     <li>
-                        <a href=#>Tutoring Hours</a>
+                        <a href="Events.html">Tutoring Hours</a>
                     </li>
                     <li>
-                        <a href=#>Events</a>
+                        <a href="Events.html">Events</a>
                     </li>
                     <li>
-                        <a href=#>Sponsors</a>
+                        <a href="Events.html">Sponsors</a>
                     </li>
                     <li>
-                        <a href=#>Join Us!</a>
+                        <a href="Events.html">Join Us!</a>
                     </li>
                 </ul>
             </div>
@@ -95,7 +95,10 @@
                     </div>
                     <div class="col-md-4 header-text4">
                         <h2><a href="#">Want to be a tutor?</a></h2>
-                        <p><a href="#" class="button">Sign up here ></a></p>
+                        <p>
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdjeXOgpjXdild4KDvcN-OVXevRbzQpzLoqFenE2fjrmRhV_A/viewform" class="button">Sign up here >
+                            </a>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -104,7 +107,7 @@
         <div class="row container3">
             <div class="col-lg-12 ">
                 <div class="quote-text">
-                    <p> We only give negative feedback</p>
+                    <p> When people come together amazing things happen</p>
                 </div>
             </div>
         </div>
