--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
                 <div class="upcoming_events">
                     <h2>WHAT IS HAPPENING THIS WEEK</h2>
-                    <p> We are currently testing and interviewing tutors this week. If you are scheduled for a exam please be on time. </p>
+                    <p> We are currently testing and interviewing tutors this week. If you are scheduled for either an exam or an interview, please be on time. </p>
                 </div>
             </div>
         </div>
