--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <p>Room: SPN 2.220</p>
                     <p>Email: ieeeUTD@gmail.com</p>
                     <br>
-                    <p><a href="https://www.google.com/maps/dir/''/Synergy+Park+North+Building+-+UT+Dallas,+811+Synergy+Park+Blvd,+Richardson,+TX+75080/@32.9936352,-96.8222377,12z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x864c2206e04feeb9:0x54e35d04c429ba8a!2m2!1d-96.7521975!2d32.9936548" class="button">google maps ></a></p>
+                    <p><a href="https://www.google.com/maps/place/3000+Synergy+Park+Blvd,+Richardson,+TX+75080/@32.9933931,-96.754401,17z/data=!3m1!4b1!4m5!3m4!1s0x864c2206dfb03f81:0x483aa0fab39edf6d!8m2!3d32.9933931!4d-96.752207" class="button">google maps ></a></p>
                 </div>
             </div>
         </div>
