--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="row container3">
             <div class="col-lg-12 ">
                 <div class="quote-text">
-                    <p> When people come together amazing things happen</p>
+                    <p> When people come together <font color=#e73d44>amazing</font> things happen</p>
                 </div>
             </div>
         </div>
