--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
                 <div class="upcoming_events">
                     <h2>WHAT IS HAPPENING THIS WEEK</h2>
-                    <p> Texas Instruments Technical Talk Monday, September 12th</p>
+                    <p> Texas Instruments Technical Talk Monday, September 12th ECSS 2.102 from 7:30pm - 9:00pm.</p>
                 </div>
             </div>
         </div>
