--- a/index.html
+++ b/index.html
@@ -133,8 +133,9 @@
         <div class ="row container5">
             <div class="col-lg-12">
                 <div class="sidebar">
-                    <h2>Good News Everyone!</h2>
-                    <p>We have plans to post notes for the classes we tutor.</p>
+                    <h2>KEITH'S CORNER</h2>
+                    <p>Note: These solutions are for review purposes only. We recommend that you try the problem before utilizing the solutions.</p>
+                    <p><a href="Documents/ENA_Fahimi_HW_1.pdf" class="button">ENA Homework1 Solutions</a></p>
                 </div>
                 <div class="upcoming_events">
                     <h2>WHAT IS HAPPENING THIS WEEK</h2>
