Added more information to the disclaimer on the homework solutions.

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
         <div class ="row container5">
             <div class="col-lg-12">
                 <div class="sidebar">
-                    <h2>KEITH'S CORNER</h2>
-                    <p>Note: These solutions are for review purposes only. We recommend that you try the problem before utilizing the solutions.</p>
+                    <h2>KEITH'S KORNER</h2>
+                    <p>Note: These solutions are for review purposes only. We recommend that you try the problems before utilizing the solutions. If you find any errors, let us know and we will correct them.</p>
                     <p><a href="Documents/ENA_Fahimi_HW_1.pdf" class="button">ENA Homework1 Solutions</a></p>
                 </div>
                 <div class="upcoming_events">
