--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <a href="Events.html">Sponsors</a>
                     </li>
                     <li>
-                        <a href="Events.html">Join Us!</a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdhTryGR-za59v0iF_rMfr0pf7o91jhy4CHokYMob1L8BL3Yw/viewform">Join Us!</a>
                     </li>
                 </ul>
             </div>
@@ -134,7 +134,7 @@
             <div class="col-lg-12">
                 <div class="sidebar">
                     <h2>KEITH'S KORNER</h2>
-                    <p>Note: These solutions are for review purposes only. We recommend that you try the problems before utilizing the solutions. If you find any errors, let us know and we will correct them.</p>
+                    <p>Note: These solutions are for review purposes only. We recommend that you try the problems before utilizing the solutions. If you find any errors, send us an email at ieeeUTD@gmail.com and we will correct them.</p>
                     <p><a href="Documents/ENA_Fahimi_HW_1.pdf" class="button">ENA Homework1 Solutions</a></p>
                 </div>
                 <div class="upcoming_events">
