--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="col-lg-12">
                 <div class="sidebar">
                     <h2>KEITH'S KORNER</h2>
-                    <p>Note: These solutions are for review purposes only. We recommend that you try the problems before utilizing the solutions. If you find any errors, send us an email at ieeeUTD@gmail.com and we will correct them.</p>
+                    <p>Note: <br/>These solutions are for review purposes only. We recommend that you try the problems before utilizing the solutions. If you find any errors, send us an email at ieeeUTD@gmail.com and we will correct them.</p>
                     <p><a href="Documents/ENA_Fahimi_HW_1.pdf" class="button">ENA Homework1 Solutions</a></p>
                 </div>
                 <div class="upcoming_events">
