--- a/index.html
+++ b/index.html
@@ -134,12 +134,15 @@
             <div class="col-lg-12">
                 <div class="sidebar">
                     <h2>KEITH'S KORNER</h2>
-                    <p>Note: <br/>These solutions are for review purposes only. We recommend that you try the problems before utilizing the solutions. If you find any errors, send us an email at ieeeUTD@gmail.com and we will correct them.<br/></p>
+                    <p>Note: <br/>These solutions are for review purposes only. We recommend that you try the problems before utilizing the solutions. If you find any errors, send us an email at ieeeUTD@gmail.com and we will correct them.<br/><br/></p>
                     <p><a href="Documents/ENA_Fahimi_HW_1.pdf" class="button">ENA Homework1 Solutions</a></p>
                 </div>
                 <div class="upcoming_events">
-                    <h2>WHAT IS HAPPENING THIS WEEK</h2>
-                    <p> Texas Instruments Technical Talk Monday, September 12th ECSS 2.102 from 7:30pm - 9:00pm.</p>
+                    <h2>EVENTS COMING UP</h2>
+                    <p> Motors and Motion Workshop August 2th, 2016 at SPN from 12PM - 3PM.</p>
+                    <p> Soldering Workshop October 1st, 2016 at SPN from 12PM - 3PM.</p>
+                    <p> Halloween Hackathon! October 22nd, 2016 at SPN from 9AM - 6PM.</p>
+                    <p> Seniors Workshop November 5th, 2016 at SPN from 12PM - 3PM.</p>
                 </div>
             </div>
         </div>
