--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
             <div class="col-lg-12">
                 <div class="sidebar">
                     <h2>KEITH'S KORNER</h2>
-                    <p>Note: <br/>These solutions are for review purposes only. We recommend that you try the problems before utilizing the solutions. If you find any errors, send us an email at ieeeUTD@gmail.com and we will correct them.<br/><br/></p>
-                    <p><a href="Documents/ENA_Fahimi_HW_1.pdf" class="button">ENA Homework1 Solutions</a></p>
+                    <p><b>Note:</b><br/>These solutions are for review purposes only. The solutions represent one way to solve the problems and the point of these solutions is to provide better understanding of the concepts. If you are utilizing these solutions solely for the answers, you are missing the point. We recommend that you try the problems before utilizing the solutions. If you find any errors, send us an email at ieeeUTD@gmail.com. Please be specific on why you feel an answer may be wrong.<br/><br/></p>
+                    <p><a href="documents/ENA_Fahimi_HW_1.pdf" class="button">ENA Homework1 Solutions</a></p>
                 </div>
                 <div class="upcoming_events">
                     <h2>EVENTS COMING UP</h2>
