--- a/index.html
+++ b/index.html
@@ -134,8 +134,9 @@
             <div class="col-lg-12">
                 <div class="sidebar">
                     <h2>KEITH'S KORNER</h2>
-                    <p><b>Note:</b><br/>These solutions are for review purposes only. The solutions represent one way to solve the problems and the point of these solutions is to provide better understanding of the concepts. If you are utilizing these solutions solely for the answers, you are missing the point. We recommend that you try the problems before utilizing the solutions. If you find any errors, send us an email at ieeeUTD@gmail.com. Please be specific on why you feel an answer may be wrong.<br/> If you are experiencing issues accessing the pdfs, please clear your browser cash and try again. If you issue persists, please email our webmaster axc138030@utdallas.edu.<br/><br/></p>
+                    <p><b>Note:</b><br/>These solutions are for review purposes only. The solutions represent one way to solve the problems and the point of these solutions is to provide better understanding of the concepts. If you are utilizing these solutions solely for the answers, you are missing the point. We recommend that you try the problems before utilizing the solutions. If you find any errors, send us an email at ieeeUTD@gmail.com. Please be specific on why you feel an answer may be wrong.<br/><br/></p>
                     <p><a href="documents/ENA_Fahimi_HW1.pdf" class="button">ENA Homework1 Solutions</a></p>
+                    <p><br/> If you are experiencing issues accessing the pdfs, please clear your browser cash and try again. If you issue persists, please email our webmaster axc138030@utdallas.edu.</p>
                 </div>
                 <div class="upcoming_events">
                     <h2>EVENTS COMING UP</h2>
