--- a/Officers.html
+++ b/Officers.html
@@ -55,7 +55,7 @@
                             <a href="Officers.html">Officers</a>
                         </li>
                         <li>
-                            <a href="Events.html">Tutoring Hours</a>
+                            <a href="Tutoring_Hours.html">Tutoring Hours</a>
                         </li>
                         <li>
                             <a href="Events.html">Events</a>
