--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <a href="Officers.html">Officers</a>
                     </li>
                     <li>
-                        <a href="Events.html">Tutoring Hours</a>
+                        <a href="Tutoring_Hours.html">Tutoring Hours</a>
                     </li>
                     <li>
                         <a href="Events.html">Events</a>
