--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
                 </div>
                 <div class="upcoming_events">
                     <h2>EVENTS COMING UP</h2>
-                    <p><b> Digital Circuits review September 20th, 2016 at SPN from 7PM - 9PM</b></p>
-                    <p>    Motors and Motion Workshop September 24th, 2016 at SPN from 12PM - 3PM.</p>
-                    <p>    Soldering Workshop October 1st, 2016 at SPN from 12PM - 3PM.</p>
-                    <p>    Halloween Hackathon! October 22nd, 2016 at SPN from 9AM - 6PM.</p>
-                    <p>    Seniors Workshop November 5th, 2016 at SPN from 12PM - 3PM.</p>
+                    <p><h4><b>Digital Circuits review September 20th, 2016 at SPN from 7PM - 9PM</b></h4></p>
+                    <p>Motors and Motion Workshop September 24th, 2016 at SPN from 12PM - 3PM.</p>
+                    <p>Soldering Workshop October 1st, 2016 at SPN from 12PM - 3PM.</p>
+                    <p>Halloween Hackathon! October 22nd, 2016 at SPN from 9AM - 6PM.</p>
+                    <p>Seniors Workshop November 5th, 2016 at SPN from 12PM - 3PM.</p>
                 </div>
             </div>
         </div>
