added a lot of stuff.

--- a/Tutoring_Hours.html
+++ b/Tutoring_Hours.html
@@ -52,17 +52,17 @@
             <!--Collect the nav links, forms, and other content for toggling-->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                     <li>
+                     <!--li>
                         <a href="Officers.html">Officers</a>
-                    </li>
+                    </li-->
                     <li>
-                        <a href="Events.html">Tutoring Hours</a>
+                        <a href="Tutoring_Hours.html">Tutoring Hours</a>
                     </li>
-                    <li>
+                    <!--li>
                         <a href="Events.html">Events</a>
-                    </li>
+                    </li-->
                     <li>
-                        <a href="Events.html">Sponsors</a>
+                        <a href=#>Sponsors</a>
                     </li>
                     <li>
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdhTryGR-za59v0iF_rMfr0pf7o91jhy4CHokYMob1L8BL3Yw/viewform">Join Us!</a>
@@ -78,9 +78,14 @@
         <div class="row container1">
             <div class="col-lg-12">
                 <div class="Digital_System_Section">
-                    <h1>
-                        <b>DIGITAL SYSTEMS TUTORING HOURS</b>
-                    </h1>
+                    <div class="title_section">
+                        <h3>
+                            <b>DIGITAL SYSTEMS TUTORING HOURS</b> 
+                        </h3>
+                    </div>
+                     <div class="button_section">
+                        <p><a href="documents/hours/DS_Schedule.pdf" class=button>Download</a></p>
+                    </div>
                     <table style="width:100%">
                         <tr>
                             <th class="tablecolor1"><h4>Harrison Post [Head DS Tutor]   </h4></th>
@@ -153,6 +158,7 @@
                             <th class="tablecolor3"><h4>srg140930@utdallas.edu</h4></th>
                         </tr>
                     </table>
+
                 </div>
             </div>
         </div>
@@ -161,9 +167,9 @@
         <div class="row container2">
             <div class="col-lg-12">
                 <div class="Digital_Circuits_Section">
-                    <h1>
+                    <h3>
                         <b>DIGITAL CIRCUITS TUTURING HOURS</b>
-                    </h1>
+                    </h3>
                 </div>
             </div>
     </article>
@@ -171,9 +177,9 @@
         <div class="row container3">
             <div class="col-lg-12">
                 <div class="ENA_Section">
-                    <h1>
+                    <h3>
                         <b>ELECTRICAL NETWORK ANALYSIS TUTURING HOURS</b>
-                    </h1>
+                    </h3>
                 </div>
             </div>
     </article>
@@ -181,9 +187,9 @@
         <div class="row container4">
             <div class="col-lg-12">
                 <div class="Signals_Section">
-                    <h1>
+                    <h3>
                         <b>SIGNALS AND SYSTEMS TUTURING HOURS</b>
-                    </h1>
+                    </h3>
                 </div>
             </div>
     </article>
