--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
  			<!--Collect the nav links, forms, and other content for toggling-->
  			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                     <li>
+                     <!--li>
                         <a href="Officers.html">Officers</a>
-                    </li>
+                    </li-->
                     <li>
                         <a href="Tutoring_Hours.html">Tutoring Hours</a>
                     </li>
-                    <li>
+                    <!--li>
                         <a href="Events.html">Events</a>
-                    </li>
+                    </li-->
                     <li>
-                        <a href="Events.html">Sponsors</a>
+                        <a href=#>Sponsors</a>
                     </li>
                     <li>
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdhTryGR-za59v0iF_rMfr0pf7o91jhy4CHokYMob1L8BL3Yw/viewform">Join Us!</a>
@@ -133,18 +133,21 @@
         <div class ="row container5">
             <div class="col-lg-12">
                 <div class="sidebar">
-                    <h2>KEITH'S KORNER</h2>
+                    <h2>KEITH'S CORNER</h2>
                     <p><b>Note:</b><br/>These solutions are for review purposes only. The solutions represent one way to solve the problems and the point of these solutions is to provide better understanding of the concepts. If you are utilizing these solutions solely for the answers, you are missing the point. We recommend that you try the problems before utilizing the solutions. If you find any errors, send us an email at ieeeUTD@gmail.com. Please be specific on why you feel an answer may be wrong.<br/><br/></p>
-                    <p><a href="documents/ENA_Fahimi_HW1.pdf" class="button">ENA Homework1 Solutions</a></p>
+                    <p><a href="documents/ENA_Solutions/ENA_Fahimi_HW1.pdf" class="button">ENA Homework1 Solutions</a></p>
                     <p><br/> If you are experiencing issues accessing the pdfs, please clear your browser cash and try again. If you issue persists, please email our webmaster axc138030@utdallas.edu.</p>
                 </div>
                 <div class="upcoming_events">
                     <h2>EVENTS COMING UP</h2>
-                    <p><h4><b>Digital Circuits review September 20th, 2016 at SPN from 7PM - 9PM</b></h4></p>
-                    <p>Motors and Motion Workshop September 24th, 2016 at SPN from 12PM - 3PM.</p>
-                    <p>Soldering Workshop October 1st, 2016 at SPN from 12PM - 3PM.</p>
-                    <p>Halloween Hackathon! October 22nd, 2016 at SPN from 9AM - 6PM.</p>
-                    <p>Seniors Workshop November 5th, 2016 at SPN from 12PM - 3PM.</p>
+                    <p><h4><b><span style="margin-left:1em">Motors and Motion Workshop September 24th, 2016 at SPN 2.220 from 12PM - 3PM.</span></b></h4></p>
+
+                    <p><span style="margin-left:2em">JSSEC Open House Mixer September 26th, 2016 at SPN 2.220. Time TBD.</span></p>
+                    <p><span style="margin-left:2em">EE/CE 3302 Signals & Systems Test Review for Dr. Khoubrouy's class September 27th 7PM - 8:30PM at ECSS 2.412.</span></p>
+                    <p><span style="margin-left:2em">EE/CE 3302 Signals & Systems Test Review for other professors class September 30th 7PM - 9:00PM. Room # TBD.</span></p>
+                    <p><span style="margin-left:2em">Soldering Workshop October 1st, 2016 at SPN from 12PM - 3PM.</span></p>
+                    <p><span style="margin-left:2em">Halloween Hackathon! October 22nd, 2016 at SPN from 9AM - 6PM.</span></p>
+                    <p><span style="margin-left:2em">Seniors Workshop November 5th, 2016 at SPN from 12PM - 3PM.</span></p>
                 </div>
             </div>
         </div>
