--- a/index.html
+++ b/index.html
@@ -140,9 +140,8 @@
                 </div>
                 <div class="upcoming_events">
                     <h2>EVENTS COMING UP</h2>
-                    <p><h4><b><span style="margin-left:1em">Motors and Motion Workshop September 24th, 2016 at SPN 2.220 from 12PM - 3PM.</span></b></h4></p>
+                    <p><h4><b><span style="margin-left:1em">JSSEC Open House Mixer September 26th, 2016 at SPN 2.220 at 7PM.</span></b></h4></p>
 
-                    <p><span style="margin-left:2em">JSSEC Open House Mixer September 26th, 2016 at SPN 2.220. Time TBD.</span></p>
                     <p><span style="margin-left:2em">EE/CE 3302 Signals & Systems Test Review for Dr. Khoubrouy's class September 27th 7PM - 8:30PM at ECSS 2.412.</span></p>
                     <p><span style="margin-left:2em">EE/CE 3302 Signals & Systems Test Review for other professors class September 30th 7PM - 9:00PM. Room # TBD.</span></p>
                     <p><span style="margin-left:2em">Soldering Workshop October 1st, 2016 at SPN from 12PM - 3PM.</span></p>
