--- a/index.html
+++ b/index.html
@@ -140,11 +140,7 @@
                 </div>
                 <div class="upcoming_events">
                     <h2>EVENTS COMING UP</h2>
-                    <p><h4><b><span style="margin-left:1em">JSSEC Open House Mixer September 26th, 2016 at SPN 2.220 at 7PM.</span></b></h4></p>
-
-                    <p><span style="margin-left:2em">EE/CE 3302 Signals & Systems Test Review for Dr. Khoubrouy's class September 27th 7PM - 8:30PM at ECSS 2.412.</span></p>
-                    <p><span style="margin-left:2em">EE/CE 3302 Signals & Systems Test Review for other professors class September 30th 7PM - 9:00PM. Room # TBD.</span></p>
-                    <p><span style="margin-left:2em">Soldering Workshop October 1st, 2016 at SPN from 12PM - 3PM.</span></p>
+                    <p><h4><b><span>Soldering Workshop October 1st, 2016 at SPN from 12PM - 3PM.</span></b></h4></p>
                     <p><span style="margin-left:2em">Halloween Hackathon! October 22nd, 2016 at SPN from 9AM - 6PM.</span></p>
                     <p><span style="margin-left:2em">Seniors Workshop November 5th, 2016 at SPN from 12PM - 3PM.</span></p>
                 </div>
