--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="row">
                     <div class="col-md-4 header-text2">
                         <h2><a href="#">Need help with classes?</a></h2>
-                        <p><a href="#" class="button">Take a look at our tutoring hours ><a></p>
+                        <p><a href="Tutoring_Hours.html" class="button">Take a look at our tutoring hours ><a></p>
                     </div>
                     <div class="col-md-4 header-text3">
                         <h2><a href="#">Bored and want something to do?</a></h2>
