added some font color

--- a/Tutoring_Hours.html
+++ b/Tutoring_Hours.html
@@ -307,7 +307,7 @@
                     <tr>
                         <th class="tablecolor1"><h4>Rushi Dalal</h4></th>
                         <th class="tablecolor2"><a href="mailto:rsd130030@utdallas.edu" class="button"><h4>rsd130030@utdallas.edu</h4></a></th>
-                        <th class="tablecolor3"><h4>Temporarily unavailable</h4></th>
+                        <th class="tablecolor3"><h4><font color="#e73d44">Temporarily unavailable</font></h4></th>
                     </tr>
                 </table>
             </div>
