fixed font issue

--- a/Tutoring_Hours.html
+++ b/Tutoring_Hours.html
@@ -243,7 +243,7 @@
                 </div>
                 <table style="width:100%">
                     <tr>
-                        <th class="tablecolor1"><h4><b>Nikki Quinn [Lead]</b></h4></th>
+                        <th class="tablecolor1"><h4>Nikki Quinn</h4></th>
                         <th class="tablecolor2"><a href="mailto:knq130030@utdallas.edu" class="button"><h4>knq130030@utdallas.edu</h4></a></th>
                         <th class="tablecolor3"><h4>Tuesdays 4:30PM - 7:00PM, Wednesdays 3:00PM - 6:30PM & Thursdays 4:30PM - 7:00PM</h4></th>
                     </tr>
