corrected a scheduling error.

--- a/Tutoring_Hours.html
+++ b/Tutoring_Hours.html
@@ -113,7 +113,7 @@
                         <tr>
                             <th class="tablecolor1"><h4>Michael Martin</h4></th>
                             <th class="tablecolor2"><a href="mailto:mjm150730@utdallas.edu" class="button"><h4>mjm150730@utdallas.edu</h4></a></th>
-                            <th class="tablecolor3"><h4>Tuesdays 1:00PM - 4:00PM & Thursdays 1:00PM - 4:00PM</h4></th>
+                            <th class="tablecolor3"><h4>Tuesdays 1:00PM - 4:00PM & Wenesdays 11:30AM - 1:30PM</h4></th>
                             
                         </tr>
                         <tr>
