--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                 </div>
                 <div class="upcoming_events">
                     <h2>EVENTS COMING UP</h2>
-                    <p><h4><b><span>Soldering Workshop October 1st, 2016 at SPN from 12PM - 3PM.</span></b></h4></p>
-                    <p><span style="margin-left:2em">Halloween Hackathon! October 22nd, 2016 at SPN from 9AM - 6PM.</span></p>
+                    <p><h4><b><span>Halloween Hackathon! October 22nd, 2016 at SPN from 9AM - 6PM.</span>/b></h4></p>
+                    <p></p>
                     <p><span style="margin-left:2em">Seniors Workshop November 5th, 2016 at SPN from 12PM - 3PM.</span></p>
                 </div>
             </div>
