some formatting errors were fixed

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </div>
                 <div class="upcoming_events">
                     <h2>EVENTS COMING UP</h2>
-                    <p><h4><b><span>>L3 Tech Talk October 24th, 2016 at TI Auditorium from 7:30PM - 8:30PM.</span></b></h4></p>
+                    <p><h4><b><span>L3 Tech Talk October 24th, 2016 at TI Auditorium from 7:30PM - 8:30PM.</span></b></h4></p>
                     <p></p>
                     <p><span style="margin-left:2em">Reverse Career Fair October 27th, 2016 at JSOM from 12PM - 3PM.</span></p>
                     <p><span style="margin-left:2em">Seniors Workshop November 5th, 2016 at SPN from 12PM - 3PM.</span></p>
