Sharon is soooo annoying!!!!!!!!!!!!!!!

--- a/Tutoring_Hours.html
+++ b/Tutoring_Hours.html
@@ -155,7 +155,7 @@
                         <tr>
                             <th class="tablecolor1"><h4>Eric Olvera</h4></th>
                             <th class="tablecolor2"><a href="mailto:emo130030@utdallas.edu" class="button"><h4>emo130030@utdallas.edu</h4></a></th>
-                            <th class="tablecolor3"><h4>Phone: Tuesdays 2:30PM - 4:30PM & Thursdays 2:30PM - 4:30PM</h4></th>
+                            <th class="tablecolor3"><h4>Tuesdays 2:30PM - 4:30PM & Thursdays 2:30PM - 4:30PM</h4></th>
                             
                         </tr>
                         <tr>
@@ -292,7 +292,7 @@
                     <tr>
                         <th class="tablecolor1"><h4><b>Soham Shah [Lead]</b></h4></th>
                         <th class="tablecolor2"><a href="mailto:sxs134230@utdallas.edu" class="button"><h4>sxs134230@utdallas.edu</h4></a></th>
-                        <th class="tablecolor3"><h4>Tuesdays 4:30PM - 7:00PM, Wednesdays 3:00PM - 6:30PM & Thursdays 4:30PM - 7:00PM</h4></th>
+                        <th class="tablecolor3"><h4>Tuesdays 2:30PM - 3:45PM & Thursdays 2:30PM - 3:45PM</h4></th>
                     </tr>
                     <tr>
                         <th class="tablecolor1"><h4>Brandon Fisher</h4></th>
@@ -329,7 +329,7 @@
                     <tr>
                         <th class="tablecolor1"><h4>Jon Ford</h4></th>
                         <th class="tablecolor2"><a href="mailto:jsf140230@utdallas.edu" class="button"><h4>jsf140230@utdallas.edu</h4></a></th>
-                        <th class="tablecolor3"><h4>Tuesdays 4:30PM - 7:00PM, Wednesdays 3:00PM - 6:30PM & Thursdays 4:30PM - 7:00PM</h4></th>
+                        <th class="tablecolor3"><h4>Mondays 1:30PM - 3:30PM & Wednesdays 1:30PM - 3:30PM</h4></th>
                     </tr>
                     <tr>
                         <th class="tablecolor1"><h4>Brandon Fisher</h4></th>
