1) Added a favicon to the president.
2) Updated the event list.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
  	<meta name="description" content="">
  	<meta name="author" content="">
 
- 	<title>IEEEUTD</title>
+    <!-- Favicon -->
+    <link rel="icon" href="images/ieee_logo_blue.png" type="image/gif" sizes="16x16">
+
+ 	<title>IEEE-UTD</title>
 
 	<!-- Bootstrap Core CSS -->
  	 <link type="text/css" href="css/bootstrap.css" rel="stylesheet"></link>
@@ -18,7 +21,7 @@
  	<link type="text/css" href="css/mainpage.css" rel="stylesheet"/>
 
  	
- 	<!--Custom Fonts -->
+ 	<!-- Custom Fonts -->
  	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
  	<!--Angular Java Script Files-->
@@ -140,11 +143,12 @@
                 </div>
                 <div class="upcoming_events">
                     <h2>EVENTS COMING UP</h2>
-                    <p><h4><b><span>Seniors Workshop November 5th, 2016 at SPN from 12PM - 3PM.</span></b></h4></p>
+                    <p><h4><b><span>Dr. Raja's Signals Exam Review November 10th, 2016 at ECSN 2.110 from 7:30PM - 9PM.</span></b></h4></p>
+                    <p><h4><b><span>Dr. Khoubrouy's Signals Exam Review November 10th, 2016 at ECSN 2.110 from 7:30PM - 9PM.</span></b></h4></p>
                     <p></p>
-                    <p><span style="margin-left:2em">Dr. Fumagali's Signals Exam Review November 7th, 2016 at ECSN 2.203 from 7PM - 9PM.</span></p>
+                    <!--p><span style="margin-left:2em">Dr. Fumagali's Signals Exam Review November 7th, 2016 at ECSN 2.203 from 7PM - 9PM.</span></p>
                     <p><span style="margin-left:2em">Dr. Raja's Signals Exam Review November 10th, 2016 at ECSN 2.110 from 7:30PM - 9PM.</span></p>
-                    <p><span style="margin-left:2em">Dr. Khoubrouy's Signals Exam Review November 10th, 2016 at ECSN 2.110 from 7:30PM - 9PM.</span></p>
+                    <p><span style="margin-left:2em">Dr. Khoubrouy's Signals Exam Review November 10th, 2016 at ECSN 2.110 from 7:30PM - 9PM.</span></p-->
                     <!--p><span style="margin-left:2em">Seniors Workshop November 5th, 2016 at SPN from 12PM - 3PM.</span></p-->
                 </div>
             </div>
