--- a/Events.html
+++ b/Events.html
@@ -9,7 +9,10 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>IEEEUTD</title>
+        <!-- Favicon -->
+        <link rel="icon" href="images/ieee_logo_blue.png" type="image/gif" sizes="16x16">
+
+        <title>IEEE-UTD</title>
 
         <!-- Bootstrap Core CSS -->
         <link type="text/css" href="css/bootstrap.css" rel="stylesheet"></link>
