made web format changes.
~Abhi

--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
                     
                     <p><b>Note:</b> These solutions are for review purposes only. The solutions represent one way to solve the problems and the point of these solutions is to provide better understanding of the concepts. If you are utilizing these solutions solely for the answers, you are missing the point. We recommend that you try the problems before utilizing the solutions. If you find any errors, send us an email at ieeeUTD@gmail.com. Please be specific on why you feel an answer may be wrong.<br/></p>
                     <h3>Electrical Network Analysis</h3>
-                    <p><a href="documents/ENA_Solutions/ENA_Fahimi_HW1&2.pdf" class="button">ENA Homework1&2 Solutions</a> <a href="documents/ENA_Solutions/ENA_Fahimi_HW3.pdf" class="button">ENA Homework3 Solutions</a> <a href="documents/ENA_Solutions/ENA_Fahimi_HW4.pdf" class="button">ENA Homework4 Solutions</a></p>
+                    <p><a href="documents/ENA_Solutions/ENA_Fahimi_HW1&2.pdf" class="button">ENA Homework1&2 Solutions</a> <a href="documents/ENA_Solutions/ENA_Fahimi_HW3.pdf" class="button">ENA Homework3 Solutions</a> <a href="documents/ENA_Solutions/ENA_Fahimi_HW4.pdf" class="button">ENA Homework4 Solutions</a><!--br/><br/--></p>
+                     <!--h3>Integrated Circuit Technology</h3-->
                     <!--p><br/> If you are experiencing issues accessing the pdfs, please clear your browser cash and try again. If you issue persists, please email our webmaster axc138030@utdallas.edu.</p-->
                     <p><br/> If you are experiencing issues accessing the pdfs, please clear your browser cash and try again. If you issue persists, please email our webmaster ieeeUTD@gmail.com.</p>
                 </div>
