--- a/Events.html
+++ b/Events.html
@@ -12,7 +12,7 @@
         <!-- Favicon -->
         <link rel="icon" href="images/ieee_logo_blue.png" type="image/gif" sizes="16x16">
 
-        <title>IEEE-UTD</title>
+        <title>IEEE-eUTD</title>
 
         <!-- Bootstrap Core CSS -->
         <link type="text/css" href="css/bootstrap.css" rel="stylesheet"></link>
