--- a/index.html
+++ b/index.html
@@ -141,16 +141,17 @@
                     
                     <p><b>Note:</b> These solutions are for review purposes only. The solutions represent one way to solve the problems and the point of these solutions is to provide better understanding of the concepts. If you are utilizing these solutions solely for the answers, you are missing the point. We recommend that you try the problems before utilizing the solutions. If you find any errors, send us an email at ieeeUTD@gmail.com. Please be specific on why you feel an answer may be wrong.<br/></p>
                     <h3>Electrical Network Analysis</h3>
-                    <p><a href="documents/ENA_Solutions/ENA_Fahimi_HW1&2.pdf" class="button">ENA Homework1&2 Solutions</a> <a href="documents/ENA_Solutions/ENA_Fahimi_HW3.pdf" class="button">ENA Homework3 Solutions</a> <a href="documents/ENA_Solutions/ENA_Fahimi_HW4.pdf" class="button">ENA Homework4 Solutions</a><!--br/><br/--></p>
-                     <!--h3>Integrated Circuit Technology</h3-->
-                    <!--p><br/> If you are experiencing issues accessing the pdfs, please clear your browser cash and try again. If you issue persists, please email our webmaster axc138030@utdallas.edu.</p-->
-                    <p><br/> If you are experiencing issues accessing the pdfs, please clear your browser cash and try again. If you issue persists, please email our webmaster ieeeUTD@gmail.com.</p>
+                    <p><a href="documents/ENA_Solutions/ENA_Fahimi_HW1&2.pdf" class="button">ENA Homework1&2 Solutions</a> <a href="documents/ENA_Solutions/ENA_Fahimi_HW3.pdf" class="button">ENA Homework3 Solutions</a> <a href="documents/ENA_Solutions/ENA_Fahimi_HW4.pdf" class="button">ENA Homework4 Solutions</a><br/><br/></p>
+                    <h3>Integrated Circuit Technology</h3>
+                    <p>This is for the extra credit lab assigned to the students of Dr. Chadwin Young's ICT class.</p>
+                    <p><a href="documents/Integrated_Circuit_Technology/SRIM_Setup.zip" class="button">SRIM & Dependences</a><br/><br/></p>
+                    <p> If you are experiencing issues accessing the pdfs, please clear your browser cash and try again. If you issue persists, please email our webmaster ieeeUTD@gmail.com.</p>
                 </div>
                 <div class="upcoming_events">
-                    <h2>EVENTS COMING UP</h2>
-                    <p><h4><b><span>Dr. Raja's Signals Exam Review November 10th, 2016 at ECSN 2.110 from 7:30PM - 9PM.</span></b></h4></p>
-                    <p><h4><b><span>Dr. Khoubrouy's Signals Exam Review November 10th, 2016 at ECSN 2.110 from 7:30PM - 9PM.</span></b></h4></p>
-                    <p></p>
+                    <h1><b>HAPPY THANKSGIVING</b></h1>
+                    <p><h3>From entire officer core of the IEEE UTD Student Chapter. We wish you a happy <br/>thanksgiving break. We are working on setting up review session for several classes<br/> on the week after the break.</span></h3></p>
+                    <!--p><h4><b><span>Dr. Khoubrouy's Signals Exam Review November 10th, 2016 at ECSN 2.110 from 7:30PM - 9PM.</span></b></h4></p>
+                    <p></p-->
                     <!--p><span style="margin-left:2em">Dr. Fumagali's Signals Exam Review November 7th, 2016 at ECSN 2.203 from 7PM - 9PM.</span></p>
                     <p><span style="margin-left:2em">Dr. Raja's Signals Exam Review November 10th, 2016 at ECSN 2.110 from 7:30PM - 9PM.</span></p>
                     <p><span style="margin-left:2em">Dr. Khoubrouy's Signals Exam Review November 10th, 2016 at ECSN 2.110 from 7:30PM - 9PM.</span></p-->
