added more stuff

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </div>
                 <div class="upcoming_events">
                     <h1><b>HAPPY THANKSGIVING</b></h1>
-                    <p><h3>From entire officer core of the IEEE UTD Student Chapter. We wish you a happy <br/>thanksgiving break. We are working on setting up review session for several classes<br/> on the week after the break.</span></h3></p>
+                    <p><h3>From entire officer core of the IEEE UTD Student Chapter. We wish you a happy thanksgiving break. We are working on setting up review session for several classes on the week after the break.</span></h3></p>
                     <!--p><h4><b><span>Dr. Khoubrouy's Signals Exam Review November 10th, 2016 at ECSN 2.110 from 7:30PM - 9PM.</span></b></h4></p>
                     <p></p-->
                     <!--p><span style="margin-left:2em">Dr. Fumagali's Signals Exam Review November 7th, 2016 at ECSN 2.203 from 7PM - 9PM.</span></p>
