--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                     <p><b>Note:</b> These solutions are for review purposes only. The solutions represent one way to solve the problems and the point of these solutions is to provide better understanding of the concepts. If you are utilizing these solutions solely for the answers, you are missing the point. We recommend that you try the problems before utilizing the solutions. If you find any errors, send us an email at ieeeUTD@gmail.com. Please be specific on why you feel an answer may be wrong.<br/></p>
                     <h3>Electrical Network Analysis</h3>
                     <p><a href="documents/ENA_Solutions/ENA_Fahimi_HW1&2.pdf" class="button">ENA Homework1&2 Solutions</a> <a href="documents/ENA_Solutions/ENA_Fahimi_HW3.pdf" class="button">ENA Homework3 Solutions</a> <a href="documents/ENA_Solutions/ENA_Fahimi_HW4.pdf" class="button">ENA Homework4 Solutions</a><br/><br/></p>
+                    <p><a href="documents/ENA_Solutions/ENA_Fahimi_HW5.pdf" class="button">ENA Homework5 Solutions</a><br/><br/></p>
                     <h3>Integrated Circuit Technology</h3>
                     <p>This is for the extra credit lab assigned to the students of Dr. Chadwin Young's ICT class.</p>
                     <p><a href="documents/Integrated_Circuit_Technology/SRIM_Setup.zip" class="button">SRIM & Dependences</a><br/><br/></p>
