--- a/Tutoring_Hours.html
+++ b/Tutoring_Hours.html
@@ -64,9 +64,9 @@
                     <!--li>
                         <a href="Events.html">Events</a>
                     </li-->
-                    <li>
+                    <!--li>
                         <a href=#>Sponsors</a>
-                    </li>
+                    </li-->
                     <li>
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdhTryGR-za59v0iF_rMfr0pf7o91jhy4CHokYMob1L8BL3Yw/viewform">Join Us!</a>
                     </li>
@@ -79,6 +79,20 @@
 
     <article>
         <div class="row container1">
+            <div class="col-lg-12">
+                <div class="Digital_System_Section">
+                    <div class="title_section">
+                        <h3>
+                            <b> Tutoring Hours will be posted soon </br><br/></b>
+                            <br/>We holding examinations for potential tutors on the week of January 23, 2017.
+                            <br/>If you are interested in tutoring, please contact <a href= " jasonpwaye@gmail.com">Jason Waye</a>.
+                        </h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </article> 
+        <!--div class="row container1">
             <div class="col-lg-12">
                 <div class="Digital_System_Section">
                     <div class="title_section">
@@ -350,7 +364,7 @@
                         <th class="tablecolor3"><h4>Friday 1:00PM - 4:00PM</h4></th>
                     </tr>
                 </table>
-            </div>
+            </div-->
     </article>
     <footer>
         <div class="row">
