--- a/Tutoring_Hours.html
+++ b/Tutoring_Hours.html
@@ -97,7 +97,7 @@
             </div>
             <div class="container">
               <ul class="nav nav-tabs responsive" id="myTab">
-                <li class="test-class active"><a class="deco-none red-class" href="#resp-tab1">EE/CE 2310</a></li>
+                <li class="test-class"><a class="deco-none red-class" href="#resp-tab1">EE/CE 2310</a></li>
                 <li class="test-class"><a href="#resp-tab2">EE/CE 3301</a></li>
                 <li><a class="deco-none" href="#resp-tab3">EE/CE 3320</a></li>
               </ul>
