Embed Facebook page

--- a/index.html
+++ b/index.html
@@ -149,8 +149,20 @@
                     <p> If you are experiencing issues accessing the pdfs, please clear your browser cash and try again. If you issue persists, please email our webmaster ieeeUTD@gmail.com.</p>
                 </div>
                 <div class="upcoming_events">
-                    <h1><b>HAPPY THANKSGIVING</b></h1>
-                    <p><h3>From entire officer core of the IEEE UTD Student Chapter. We wish you a happy thanksgiving break. We are working on setting up review session for several classes on the week after the break.</span></h3></p>
+                    <!--<h1><b>HAPPY THANKSGIVING</b></h1>-->
+                    <h2>JOIN US ON FACEBOOK</h2>
+                    <!--<p><h3>From entire officer core of the IEEE UTD Student Chapter. We wish you a happy thanksgiving break. We are working on setting up review session for several classes on the week after the break.</span></h3></p>-->
+                    <div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
+                      <div class="responsive-wrapper
+                         responsive-wrapper-wxh-572x612"
+                         style="-webkit-overflow-scrolling: touch; overflow: auto;">
+                        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FIEEEUTD%2F&tabs=timeline&width=500&height=570&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="500" height="700" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true">
+                          <p style="font-size: 110%;"><em><strong>ERROR: </strong>
+                            An &#105;frame should be displayed here but your browser version does not support &#105;frames. </em>Please update your browser to its most recent version and try again.</p>
+                        </iframe>
+
+                      </div>
+                    </div>
                     <!--p><h4><b><span>Dr. Khoubrouy's Signals Exam Review November 10th, 2016 at ECSN 2.110 from 7:30PM - 9PM.</span></b></h4></p>
                     <p></p-->
                     <!--p><span style="margin-left:2em">Dr. Fumagali's Signals Exam Review November 7th, 2016 at ECSN 2.203 from 7PM - 9PM.</span></p>
@@ -161,7 +173,6 @@
             </div>
         </div>
     </article>
-
     <footer>
         <div class="row">
             <div class="col-lg-12">
